Changelog
=========
http://cassandradriver.com

2014-04-16 - V.1.15
Carles Mateo
Sorry, due to license request by a Datastax's engineer I removed the Datastax python driver.
You have to download yourself from:
https://github.com/datastax/python-driver

The files needed are the folder cassandra/ and example.py

2014-04-15 - V.1.14
Carles Mateo
Added support for connecting to different port

Added to Driver cud.py format XML escaping of < > & to html entities, to avoid problems with XML

Added to Driver cud.py format XML escaping of < > & to html entities, to avoid problems with XML

Added htmlentites to sample_www_form.php to display the <> characters.

Added to sample_www_form.php display of the original query to the driver.

debugp() allows to pass a parameter to stop the execution or not

2014-04-13 - V.1.12
Carles Mateo
Added sample code for node.js

Added file doc/folder_structure.txt

2014-04-12 - V.1.12
Carles Mateo
UTF-8 support

Added client_samples/bash sample with bash and curl

2014-04-12 - V.1.11
Carles Mateo
Added Form Sample Application, Form to query C.U.D.

2014-04-10 - V.1.1
Carles Mateo
Added Perl Sample

If field is empty (None), empty string is returned instead of None

Added XML support

2014-04-07 - V.1.0
Carles Mateo
Released version 1.0 of Cassandra Universal Driver