@@ -4,17 +4,45 @@
  * Creator:      Carles Mateo
  * Date Created: 2014-04-07 13:46
  * Last Updater: Carles Mateo
- * Last Updated: 2014-04-08 18:38
+ * Last Updated: 2014-04-18 00:50 (GMT+1)
  * Filename:     sample_www.php
  * Description:  Sample demo of using Cassandra Universal Driver with PHP from web
- * Version:      1.0
+ * Version:      1.16
  */
+
+if (isset($_POST['cud_host'])) {
+    $s_cud_host = $_POST['cud_host'];
+} else {
+    // Default keyspace
+    $s_cud_host = '127.0.0.1';
+}
+
+if (isset($_POST['cud_port'])) {
+    $s_cud_port = $_POST['cud_port'];
+} else {
+    // Default keyspace
+    $s_cud_port = '80';
+}
+
+if (isset($_POST['cud_path'])) {
+    $s_cud_path = $_POST['cud_path'];
+} else {
+    // Default keyspace
+    $s_cud_path = '/cgi-bin/cud.py';
+}
 
 if (isset($_POST['cluster'])) {
     $s_cluster = $_POST['cluster'];
 } else {
     // Default keyspace
     $s_cluster = '127.0.0.1';
+}
+
+if (isset($_POST['port'])) {
+    $s_port = $_POST['port'];
+} else {
+    // Default keyspace
+    $s_port = '9042';
 }
 
 if (isset($_POST['keyspace'])) {
@@ -38,7 +66,13 @@ if (isset($_POST['format']) && $_POST['format'] == 'html') {
     </head>
     <body>
     <form name="form_cql" method="POST" action="">
-    Cluster: <input type="text" name="cluster" value="<?php echo $s_cluster; ?>" /><br />
+    <strong>C.U.D. information:</strong><br />
+    Host for C.U.D.: <input type="text" name="cud_host" value="<?php echo $s_cud_host; ?>" /><br />
+    Path to cud.py: <input type="text" name="cud_path" value="<?php echo $s_cud_path; ?>" /><br />
+    C.U.D. Port: <input type="text" name="cud_port" value="<?php echo $s_cud_port; ?>" /><br />
+    <br />
+    <strong>Cassandra information:</strong><br />
+    Cluster: <input type="text" name="cluster" value="<?php echo $s_cluster; ?>" /> Port: <input type="text" name="port" value="<?php echo $s_port; ?>" /><br />
     Keyspace: <input type="text" name="keyspace" value="<?php echo $s_keyspace; ?>" /> (empty if you plan to create one)<br />
     CQL: <textarea name="cql" rows="4" cols="50"></textarea><br />
     Format: <input type="radio" name="format" value="html" <?php if ($s_format == 'html') { echo 'checked'; } ?>> html
@@ -54,7 +88,7 @@ if (isset($_POST['cql'])) {
 
     $i_start_time = microtime(true);
 
-    $s_cud_request = "http://127.0.0.1/cgi-bin/cud.py?format=$s_format&cluster=$s_cluster&user=test&password=test&keyspace=$s_keyspace&cql=$s_cql_encoded";
+    $s_cud_request = "http://$s_cud_host:$s_cud_port$s_cud_path?format=$s_format&cluster=$s_cluster&port=$s_port&user=test&password=test&keyspace=$s_keyspace&cql=$s_cql_encoded";
 
     if ($s_format == 'html') {
         $ch = curl_init($s_cud_request);
@@ -73,6 +107,12 @@ if (isset($_POST['cql'])) {
     echo 'Query to driver:<br />';
     echo '<pre>'.htmlentities($s_cud_request).'</pre>';
     echo '<br />';
+
+    if ($s_format == 'xml' && $o_xml === false) {
+        // Problem loading the XML
+        echo 'There was a problem loading the xml/malformed. Call the request manually to get more details.';
+        exit();
+    }
 
     if ($s_format == 'xml') {
         $s_error_code = $o_xml->status->error_code;
